--- a/p_class.ipynb
+++ b/p_class.ipynb
@@ -57,7 +57,7 @@
         "id": "XOagyphdJKQ4"
       },
       "source": [
-        "<h1>The Amazing Tree Classifier!</h1>"
+        "<h1>The Amazing Plant Classifier!</h1>"
       ]
     },
     {
@@ -130,7 +130,7 @@
         "outputId": "06df81e3-0a6f-40ee-bd2f-b36213d134d2"
       },
       "source": [
-        "display(VBox([widgets.Label('Select your bear!'), btn_upload, out_pl, lbl_pred]))"
+        "display(VBox([widgets.Label('Select your Plant!'), btn_upload, out_pl, lbl_pred]))"
       ],
       "execution_count": null,
       "outputs": [
